--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ dependencies = [
     "matplotlib>=3.10.7",
     "pandas>=2.3.3",
     "pyarrow>=22.0.0",
-    "pyyaml>=6.0.3",p
-    "scikit-learn>=1.7.2",
+    "pyyaml>=6.0.3",
+    "scikit-learn==1.7.0",
     "shap>=0.49.1",
     "torch>=2.9.1",
 ]
